kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.duhigure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-service
            port:
              number: 3000  # Changed from 80 to 3000
